# openclaw_trading

./: .env.example  .gitignore  DEBATE_ARENA_LOCAL.md  OPENCLAW_SETUP.md  README.md  hl_client.py  openclaw_instructions.md  project_env.py  pyproject.toml  run_smoke.sh
backtest/: engine.py
debate/: __init__.py  consensus.py  context_builder.py  engine.py  models.py  personalities.py  store.py
docs/: BACKTEST.md
runtime/: cycles.py  health.py
scripts/: openclaw_scheduler.py  run_backtest.py  run_debate_once.py  smoke_test_openclaw.py
skills/: __init__.py  close_trade.py  dsl.py  entry_manager.py  portfolio.py  risk_manager.py  scanner.py  signals.py  support.py  trade_state_reconciler.py  wolf_strategy.py
